# desktop-message

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: build.yml  cd.yml  ci.yml  napi_build.yml  napi_cd.yml  napi_ci.yml
deskmg/: Cargo.toml
deskmg/src/: lib.rs
deskmg/src/mqtt/: acl.rs
deskmsg/: Cargo.toml
deskmsg-c/: Cargo.toml  build.rs
deskmsg-c/src/: lib.rs
deskmsg/src/: lib.rs  server.rs
deskmsg/src/discovery/: ble.rs  mdns.rs  mod.rs
deskmsg/src/http/: mod.rs
deskmsg/src/mqtt/: acl.rs  mod.rs
deskmsg_c/: CMakeLists.txt  Cargo.toml  build.rs
deskmsg_c/examples/: c_example.c
deskmsg_c/include/: deskmsg_c.h
deskmsg_c/src/: c_peripheral.rs  lib.rs
deskmsg_napi/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  test.js
deskmsg_napi/.github/workflows/: CI.yml
deskmsg_napi/__test__/: index.spec.mjs
deskmsg_napi/npm/darwin-arm64/: README.md  package.json
deskmsg_napi/npm/darwin-x64/: README.md  package.json
deskmsg_napi/npm/linux-x64-gnu/: README.md  package.json
deskmsg_napi/npm/win32-x64-msvc/: README.md  package.json
deskmsg_napi/src/: lib.rs
examples/c_example/: CMakeLists.txt  c_example.c
examples/electron_example/: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  preload.js  render.js
lib/: Cargo.toml  build.rs
lib/examples/: c_example.c
lib/include/: tiny-protocol.h  tiny-rmqtt.h
lib/src/: lib.rs  server.rs
lib/src/http/: mod.rs
lib/src/mqtt/: acl.rs  mod.rs
