[workspace]
resolver = "2"
members = [
    "deskmsg",
    "bin",
    "deskmsg_c",
    "deskmsg_napi",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["timzaak <zsy.evan@gmail.com>"]
rust-version = "1.86.0"

[workspace.dependencies]
deskmsg = { path = "deskmsg" }
#deskmsg_c = {path = "deskmsg_c" }
cbindgen = "0.29"
mdns-sd = "0.14"
btleplug = "0.11"

# log
tracing = "0.1"
tracing-subscriber = "0.3"

rmqtt = "0.15"
rmqtt-auto-subscription = "0.15"
rmqtt-sys-topic = "0.15"
#rmqtt = {path = "../rmqtt/rmqtt", version = "0.15.0-beta.7"}
#rmqtt-auto-subscription = {path = "../rmqtt/rmqtt-plugins/rmqtt-auto-subscription"}
#rmqtt-sys-topic = {path = "../rmqtt/rmqtt-plugins/rmqtt-sys-topic"}

salvo = "0.76" # from https://github.com/rmqtt/rmqtt/blob/master/rmqtt-plugins/rmqtt-http-api/Cargo.toml

# copy from rmqtt workspace
tokio = { version = "1.44", default-features = false }
reqwest = "0.12"
futures = "0.3"
serde = "1.0"
tokio-util = "0.7"
tokio-rustls = "0.26"
dashmap = "=6.1.0"
ahash = "0.8"
bytes = "1.9"
scopeguard = "1"
anyhow = "1.0"
async-trait = "0.1"
log = "0.4"
once_cell = "1.21.3"
uuid = "1.11.0"
serde_json = "1.0"

[profile.dev]
opt-level = 0

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
panic = "abort"