[package]
name = "deskmg"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true


[lib]
name = "deskmg"
crate-type = ["cdylib", "lib"]


[dependencies]
tokio = {workspace = true}
mdns-sd = {workspace = true}
rmqtt = { workspace = true, features = ["plugin", "rmqtt-macros"]}
rmqtt-sys-topic = { workspace = true }
rmqtt-auto-subscription = { workspace = true }
log = { workspace = true }
futures = {workspace = true}
async-trait = {workspace = true}
anyhow = {workspace = true}
salvo = {workspace = true, features = ["affix-state"]}
once_cell = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}

[build-dependencies]
cbindgen.workspace = true