[package]
name = "deskmsg_napi"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
deskmsg = { workspace = true }
log.workspace = true
tokio = { workspace =  true}
once_cell = {workspace = true}

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
