[package]
name = "deskmsg_napi"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.1.2" }
napi-derive = "3.1.1"
deskmsg = { workspace = true }
log.workspace = true
tokio = { workspace = true }
once_cell = { workspace = true }

[build-dependencies]
napi-build = "2.2.2"

[profile.release]
lto = true
strip = "symbols"
